// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/api/scan/resolve snapshot — 'BONK — curated + mention overlap (cur…' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "BONK",
      "ticker": "BONK",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "BONK",
  "results": [
    {
      "address": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "BONK",
      "ticker": "BONK",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "BONK",
    "ticker": "BONK",
    "volume24hUsd": null,
  },
  "source": "curated",
  "status": "resolved",
  "token": {
    "address": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "DezXAZ8z7PnrnRJjz3wXBoRgixCa6xjnB7YaB1pPB263",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "BONK",
    "ticker": "BONK",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'BOTIFY — mentions only' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
      "chain": "SOL",
      "kolCount": 2,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
      "name": null,
      "pairCreatedAt": null,
      "source": "mentions",
      "symbol": "BOTIFY",
      "ticker": "BOTIFY",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "BOTIFY",
  "results": [
    {
      "address": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
      "chain": "SOL",
      "kolCount": 2,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
      "name": null,
      "pairCreatedAt": null,
      "source": "mentions",
      "symbol": "BOTIFY",
      "ticker": "BOTIFY",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
    "chain": "SOL",
    "kolCount": 2,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
    "name": null,
    "pairCreatedAt": null,
    "source": "mentions",
    "symbol": "BOTIFY",
    "ticker": "BOTIFY",
    "volume24hUsd": null,
  },
  "source": "mentions",
  "status": "resolved",
  "token": {
    "address": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
    "chain": "SOL",
    "kolCount": 2,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "BYZ9CcZGKAXmN2uDsKcQMM9UnZacja4vWcns9Th69xb",
    "name": null,
    "pairCreatedAt": null,
    "source": "mentions",
    "symbol": "BOTIFY",
    "ticker": "BOTIFY",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'BTC — only coingecko' > matches the locked response 1`] = `
{
  "candidates": [],
  "count": 0,
  "found": false,
  "matchType": null,
  "query": "BTC",
  "results": [],
  "selected": null,
  "source": null,
  "status": "not_found",
  "token": null,
}
`;

exports[`/api/scan/resolve snapshot — 'ETH — only coingecko (multi-platform)' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "chain": "ETH",
      "kolCount": 0,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "name": "Ethereum",
      "pairCreatedAt": null,
      "source": "coingecko",
      "symbol": "ETH",
      "ticker": "ETH",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "ETH",
  "results": [
    {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "chain": "ETH",
      "kolCount": 0,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "name": "Ethereum",
      "pairCreatedAt": null,
      "source": "coingecko",
      "symbol": "ETH",
      "ticker": "ETH",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
    "chain": "ETH",
    "kolCount": 0,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
    "name": "Ethereum",
    "pairCreatedAt": null,
    "source": "coingecko",
    "symbol": "ETH",
    "ticker": "ETH",
    "volume24hUsd": null,
  },
  "source": "coingecko",
  "status": "resolved",
  "token": {
    "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
    "chain": "ETH",
    "kolCount": 0,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
    "name": "Ethereum",
    "pairCreatedAt": null,
    "source": "coingecko",
    "symbol": "ETH",
    "ticker": "ETH",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'JUP — single curated SOL' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "JUP",
      "ticker": "JUP",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "JUP",
  "results": [
    {
      "address": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "JUP",
      "ticker": "JUP",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "JUP",
    "ticker": "JUP",
    "volume24hUsd": null,
  },
  "source": "curated",
  "status": "resolved",
  "token": {
    "address": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "JUPyiwrYJFskUPiHa7hkeR8VUtAeFoSYbKedZNsDvCN",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "JUP",
    "ticker": "JUP",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'NORESULT — no internal, coingecko emp…' > matches the locked response 1`] = `
{
  "candidates": [],
  "count": 0,
  "found": false,
  "matchType": null,
  "query": "NORESULT",
  "results": [],
  "selected": null,
  "source": null,
  "status": "not_found",
  "token": null,
}
`;

exports[`/api/scan/resolve snapshot — 'RAVE — mentions only' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "RaveTokenSynthetic111111111111111111111111ab",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "RaveTokenSynthetic111111111111111111111111ab",
      "name": null,
      "pairCreatedAt": null,
      "source": "mentions",
      "symbol": "RAVE",
      "ticker": "RAVE",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "RAVE",
  "results": [
    {
      "address": "RaveTokenSynthetic111111111111111111111111ab",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "RaveTokenSynthetic111111111111111111111111ab",
      "name": null,
      "pairCreatedAt": null,
      "source": "mentions",
      "symbol": "RAVE",
      "ticker": "RAVE",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "RaveTokenSynthetic111111111111111111111111ab",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "RaveTokenSynthetic111111111111111111111111ab",
    "name": null,
    "pairCreatedAt": null,
    "source": "mentions",
    "symbol": "RAVE",
    "ticker": "RAVE",
    "volume24hUsd": null,
  },
  "source": "mentions",
  "status": "resolved",
  "token": {
    "address": "RaveTokenSynthetic111111111111111111111111ab",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "RaveTokenSynthetic111111111111111111111111ab",
    "name": null,
    "pairCreatedAt": null,
    "source": "mentions",
    "symbol": "RAVE",
    "ticker": "RAVE",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'SOL — only coingecko' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "So11111111111111111111111111111111111111112",
      "chain": "SOL",
      "kolCount": 0,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "So11111111111111111111111111111111111111112",
      "name": "Solana",
      "pairCreatedAt": null,
      "source": "coingecko",
      "symbol": "SOL",
      "ticker": "SOL",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "SOL",
  "results": [
    {
      "address": "So11111111111111111111111111111111111111112",
      "chain": "SOL",
      "kolCount": 0,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "So11111111111111111111111111111111111111112",
      "name": "Solana",
      "pairCreatedAt": null,
      "source": "coingecko",
      "symbol": "SOL",
      "ticker": "SOL",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "So11111111111111111111111111111111111111112",
    "chain": "SOL",
    "kolCount": 0,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "So11111111111111111111111111111111111111112",
    "name": "Solana",
    "pairCreatedAt": null,
    "source": "coingecko",
    "symbol": "SOL",
    "ticker": "SOL",
    "volume24hUsd": null,
  },
  "source": "coingecko",
  "status": "resolved",
  "token": {
    "address": "So11111111111111111111111111111111111111112",
    "chain": "SOL",
    "kolCount": 0,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "So11111111111111111111111111111111111111112",
    "name": "Solana",
    "pairCreatedAt": null,
    "source": "coingecko",
    "symbol": "SOL",
    "ticker": "SOL",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'USDC — curated SOL (wins over coingec…' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "USDC",
      "ticker": "USDC",
      "volume24hUsd": null,
    },
  ],
  "count": 1,
  "found": true,
  "matchType": "exact",
  "query": "USDC",
  "results": [
    {
      "address": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "USDC",
      "ticker": "USDC",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "USDC",
    "ticker": "USDC",
    "volume24hUsd": null,
  },
  "source": "curated",
  "status": "resolved",
  "token": {
    "address": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "USDC",
    "ticker": "USDC",
    "volume24hUsd": null,
  },
}
`;

exports[`/api/scan/resolve snapshot — 'USDT — multiple curated across chains' > matches the locked response 1`] = `
{
  "candidates": [
    {
      "address": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "USDT",
      "ticker": "USDT",
      "volume24hUsd": null,
    },
    {
      "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "chain": "ETH",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "USDT",
      "ticker": "USDT",
      "volume24hUsd": null,
    },
  ],
  "count": 2,
  "found": false,
  "matchType": "exact",
  "query": "USDT",
  "results": [
    {
      "address": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
      "chain": "SOL",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "USDT",
      "ticker": "USDT",
      "volume24hUsd": null,
    },
    {
      "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "chain": "ETH",
      "kolCount": 1,
      "liquidityUsd": null,
      "lowLiquidity": false,
      "matchType": "exact",
      "mint": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "name": null,
      "pairCreatedAt": null,
      "source": "curated",
      "symbol": "USDT",
      "ticker": "USDT",
      "volume24hUsd": null,
    },
  ],
  "selected": {
    "address": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "USDT",
    "ticker": "USDT",
    "volume24hUsd": null,
  },
  "source": "curated",
  "status": "ambiguous",
  "token": {
    "address": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
    "chain": "SOL",
    "kolCount": 1,
    "liquidityUsd": null,
    "lowLiquidity": false,
    "matchType": "exact",
    "mint": "Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB",
    "name": null,
    "pairCreatedAt": null,
    "source": "curated",
    "symbol": "USDT",
    "ticker": "USDT",
    "volume24hUsd": null,
  },
}
`;
